--- a/SLN_FEE_MANAGEMENT/App.config
+++ b/SLN_FEE_MANAGEMENT/App.config
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="SqlConnectionString" providerName="System.Data.sqlclient" connectionString= "Server=tcp:slnazuredbserver.database.windows.net,1433;Initial Catalog=SLNAZUREDB;Persist Security Info=False;User ID=slnadmin;Password=PurushothamM@786;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
- />
+		<add name="SqlConnectionString" providerName="System.Data.sqlclient" connectionString= "Server=tcp:slnazuredbserver.database.windows.net,1433;Initial Catalog=SLNAZUREDB;Persist Security Info=False;User ID=slnadmin;Password=PurushothamM@786;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
+
+		<!--<add name="SqlConnectionString" providerName="System.Data.sqlclient" connectionString= "Server=DESKTOP-NV5O4F8;Initial Catalog=SLNDB;Integrated Security=True;"/>-->  
 		
-		<!--//Server=tcp:slndbserver.database.windows.net,1433;Initial Catalog=SLNDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";-->
 	</connectionStrings>
+	<appSettings>
+	<!-- Email configuration -->
+	<add key="FromEmail" value="purushotham.agraharam@gmail.com" />
+	<add key="ToEmail" value="purushotham.agraharam@gmail.com,dileepkumar988543@gmail.com" />
+	<add key="SmtpServer" value="smtp.gmail.com" />
+	<add key="SmtpPort" value="587" />
+	<add key="EmailPassword" value="prvv nyvp jzrm qjtd" />
+		</appSettings>
 </configuration>
